--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "deployUrl": "static/",
-            "outputPath": "dist/frontend",
+            "outputPath": "dist/",
             "index": "frontend/index.html",
             "main": "frontend/main.ts",
             "polyfills": "frontend/polyfills.ts",
