--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,22 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "bundle-report": "webpack-bundle-analyzer dist/frontend/stats.json"
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.8",
+    "@angular/animations": "^7.2.9",
     "@angular/cdk": "^7.3.4",
-    "@angular/common": "^7.2.8",
-    "@angular/compiler": "^7.2.8",
-    "@angular/core": "^7.2.8",
-    "@angular/forms": "^7.2.8",
-    "@angular/http": "^7.2.8",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
     "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "^7.2.8",
-    "@angular/platform-browser-dynamic": "^7.2.8",
-    "@angular/router": "^7.2.8",
-    "@angular/service-worker": "^7.2.8",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
+    "@angular/service-worker": "^7.2.9",
     "core-js": "^2.6.5",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
@@ -32,11 +32,11 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.5",
     "@angular/cli": "~7.3.5",
-    "@angular/compiler-cli": "^7.2.8",
-    "@angular/language-service": "^7.2.8",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "^7.2.9",
     "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~11.11.2",
+    "@types/node": "^11.11.3",
     "brotli": "^1.3.2",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
