A lot more work towards getting the new frontend working. It now shows the list of item titles and allows users to refresh, but can't do any backfilling at all.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -7,7 +7,7 @@
       "root": "",
       "sourceRoot": "frontend",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "awrss",
       "schematics": {
         "@schematics/angular:component": {
           "styleext": "scss"
