--- a/frontend/ngsw-config.json
+++ b/frontend/ngsw-config.json
@@ -1,7 +1,7 @@
 {
   "index": "/index.html",
   "assetGroups": [{
-    "name": "app",
+    "name": "awrss",
     "installMode": "prefetch",
     "resources": {
       "files": [
