--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,7 +28,9 @@
               "frontend/manifest.json"
             ],
             "styles": [
-              "frontend/styles.scss"
+              "node_modules/normalize.css/normalize.css",
+              "frontend/styles.scss",
+              "frontend/theme.scss"
             ],
             "scripts": []
           },
@@ -77,7 +79,9 @@
             "tsConfig": "frontend/tsconfig.spec.json",
             "karmaConfig": "frontend/karma.conf.js",
             "styles": [
-              "frontend/styles.scss"
+              "node_modules/normalize.css/normalize.css",
+              "frontend/styles.scss",
+              "frontend/theme.scss"
             ],
             "scripts": [],
             "assets": [
