--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^7.2.9",
     "@angular/service-worker": "^7.2.9",
     "core-js": "^2.6.5",
+    "normalize.css": "^8.0.1",
     "rxjs": "^6.4.0",
     "zone.js": "^0.8.29"
   },
