Trying to make PWA work. It works in chrome but not firefox.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,7 +25,8 @@
             "assets": [
               "frontend/favicon.ico",
               "frontend/assets",
-              "frontend/manifest.json"
+              "frontend/manifest.json",
+              "frontend/robots.txt"
             ],
             "styles": [
               "node_modules/normalize.css/normalize.css",
