--- a/frontend/frontend/manifest.json
+++ b/frontend/frontend/manifest.json
@@ -7,5 +7,16 @@
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "icons": []
+  "icons": [{
+    "src": "/favicon.ico",
+    "sizes": "16x16 24x24 32x32 48x48 64x64 72x72 96x96 128x128 256x256"
+  }, {
+    "src": "/assets/icons/graphicsvibe-rss-feed-128.png",
+    "sizes": "128x128",
+    "type": "image/png"
+  }, {
+    "src": "/assets/icons/graphicsvibe-rss-feed-256.png",
+    "sizes": "256x256",
+    "type": "image/png"
+  }]
 }
