Switch to virtual scrolling and implement basic individual feed pages. Redo styling.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -33,6 +33,11 @@
               "frontend/styles.scss",
               "frontend/theme.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "frontend"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
@@ -84,6 +89,11 @@
               "frontend/styles.scss",
               "frontend/theme.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "frontend"
+              ]
+            },
             "scripts": [],
             "assets": [
               "frontend/favicon.ico",
