--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "bundle-report": "webpack-bundle-analyzer dist/stats.json"
+    "bundle-report": "ng build --prod --stats-json && node compress.js && webpack-bundle-analyzer dist/stats.json"
   },
   "private": true,
   "dependencies": {
