--- a/package.json
+++ b/package.json
@@ -11,46 +11,51 @@
     "e2e": "ng e2e",
     "bundle-report": "ng build --prod --stats-json && node compress.js && webpack-bundle-analyzer dist/stats.json"
   },
+  "browserslist": [
+    "last 2 and_chr versions",
+    "last 2 and_ff versions",
+    "last 2 chrome versions",
+    "last 2 firefox versions"
+  ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.14",
-    "@angular/compiler": "^7.2.14",
-    "@angular/core": "^7.2.14",
-    "@angular/forms": "^7.2.14",
-    "@angular/http": "^7.2.14",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.14",
-    "@angular/platform-browser-dynamic": "^7.2.14",
-    "@angular/router": "^7.2.14",
-    "@angular/service-worker": "^7.2.14",
-    "core-js": "^2.6.5",
+    "@angular/animations": "^8.1.1",
+    "@angular/cdk": "^8.0.2",
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/forms": "^8.1.1",
+    "@angular/material": "^8.0.2",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
+    "@angular/router": "^8.1.1",
+    "@angular/service-worker": "^8.1.1",
+    "core-js": "^3.1.4",
     "normalize.css": "^8.0.1",
-    "rxjs": "^6.5.1",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.14",
-    "@angular/language-service": "^7.2.14",
-    "@types/jasmine": "^3.3.12",
+    "@angular-devkit/build-angular": "^0.800.6",
+    "@angular/cli": "^8.1.1",
+    "@angular/compiler-cli": "^8.1.1",
+    "@angular/language-service": "^8.1.1",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^12.0.0",
+    "@types/node": "^12.6.3",
     "brotli": "^1.3.2",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.1.0",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.2.4",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.4.5",
     "webpack-bundle-analyzer": "^3.3.2"
   }
 }
