Add fonts to service worker caching.

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -17,7 +17,9 @@
     "updateMode": "prefetch",
     "resources": {
       "files": [
-        "/assets/**"
+        "/assets/**",
+        "https://fonts.googleapis.com/**",
+        "https://fonts.gstatic.com/**"
       ]
     }
   }]
