--- a/package.json
+++ b/package.json
@@ -19,43 +19,44 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.14",
-    "@angular/cdk": "^10.1.3",
-    "@angular/common": "^10.0.14",
-    "@angular/compiler": "^10.0.14",
-    "@angular/core": "^10.0.14",
-    "@angular/forms": "^10.0.14",
-    "@angular/material": "^10.1.3",
-    "@angular/platform-browser": "^10.0.14",
-    "@angular/platform-browser-dynamic": "^10.0.14",
-    "@angular/router": "^10.0.14",
-    "@angular/service-worker": "^10.0.14",
-    "core-js": "^3.6.5",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.0.4",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "^11.0.9",
+    "@angular/material": "^11.0.4",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "@angular/service-worker": "^11.0.9",
+    "core-js": "^3.8.2",
+    "fuse.js": "^6.4.6",
     "normalize.css": "^8.0.1",
-    "rxjs": "^6.6.2",
+    "rxjs": "^6.6.3",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "^10.0.8",
-    "@angular/compiler-cli": "^10.0.14",
-    "@angular/language-service": "^10.0.14",
-    "@types/jasmine": "^3.5.14",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/language-service": "^11.0.9",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.6.1",
+    "@types/node": "^14.14.21",
     "brotli": "^1.3.2",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.1.1",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "^6.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^3",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "typescript": "^4.0.5",
+    "webpack-bundle-analyzer": "^4.3.0"
   }
 }
