--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@angular/router": "^11.0.9",
     "@angular/service-worker": "^11.0.9",
     "core-js": "^3.8.2",
-    "fuse.js": "^6.4.6",
+    "fuzzy": "^0.1.3",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.6.3",
     "zone.js": "^0.10.3"
