Actually make font caching work.

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -17,7 +17,9 @@
     "updateMode": "prefetch",
     "resources": {
       "files": [
-        "/assets/**",
+        "/assets/**"
+      ],
+      "urls": [
         "https://fonts.googleapis.com/**",
         "https://fonts.gstatic.com/**"
       ]
