--- a/package.json
+++ b/package.json
@@ -19,44 +19,44 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.1",
-    "@angular/cdk": "^12.1.1",
-    "@angular/common": "^12.1.1",
-    "@angular/compiler": "^12.1.1",
-    "@angular/core": "^12.1.1",
-    "@angular/forms": "^12.1.1",
-    "@angular/material": "^12.1.1",
-    "@angular/platform-browser": "^12.1.1",
-    "@angular/platform-browser-dynamic": "^12.1.1",
-    "@angular/router": "^12.1.1",
-    "@angular/service-worker": "^12.1.1",
-    "core-js": "^3.15.2",
+    "@angular/animations": "^12.2.4",
+    "@angular/cdk": "^12.2.4",
+    "@angular/common": "^12.2.4",
+    "@angular/compiler": "^12.2.4",
+    "@angular/core": "^12.2.4",
+    "@angular/forms": "^12.2.4",
+    "@angular/material": "^12.2.4",
+    "@angular/platform-browser": "^12.2.4",
+    "@angular/platform-browser-dynamic": "^12.2.4",
+    "@angular/router": "^12.2.4",
+    "@angular/service-worker": "^12.2.4",
+    "core-js": "^3.17.2",
     "fuzzy": "^0.1.3",
     "normalize.css": "^8.0.1",
-    "rxjs": "^6.6.7",
+    "rxjs": "^7.3.0",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.1.1",
-    "@angular/cli": "^12.1.1",
-    "@angular/compiler-cli": "^12.1.1",
-    "@angular/language-service": "^12.1.1",
-    "@types/jasmine": "^3.7.7",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/node": "^16.0.0",
+    "@angular-devkit/build-angular": "^12.2.4",
+    "@angular/cli": "^12.2.4",
+    "@angular/compiler-cli": "^12.2.4",
+    "@angular/language-service": "^12.2.4",
+    "@types/jasmine": "^3.9.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^16.7.10",
     "brotli": "^1.3.2",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "^3.8.0",
+    "jasmine-core": "^3.9.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.6.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "^7.0.0",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.2.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5",
+    "typescript": "~4.3.5",
     "webpack-bundle-analyzer": "^4.4.2"
   }
 }
