--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,4 +25,6 @@ services:
     volumes:
       - ./frontend:/aw-rss/frontend:ro
       - ./node_modules:/aw-rss/node_modules_out:rw
-    command: rsync -rlptD --delete --size-only node_modules/ node_modules_out
+      - ./package.json:/aw-rss/parent-package.json:rw
+      - ./package-lock.json:/aw-rss/parent-lock.json:rw
+    command: sh -c "rsync -rlptD --delete --size-only node_modules/ node_modules_out; cp package.json parent-package.json; cp package-lock.json parent-lock.json"
