--- a/package.json
+++ b/package.json
@@ -19,44 +19,44 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.4",
-    "@angular/cdk": "^12.2.4",
-    "@angular/common": "^12.2.4",
-    "@angular/compiler": "^12.2.4",
-    "@angular/core": "^12.2.4",
-    "@angular/forms": "^12.2.4",
-    "@angular/material": "^12.2.4",
-    "@angular/platform-browser": "^12.2.4",
-    "@angular/platform-browser-dynamic": "^12.2.4",
-    "@angular/router": "^12.2.4",
-    "@angular/service-worker": "^12.2.4",
-    "core-js": "^3.17.2",
+    "@angular/animations": "^13.3.10",
+    "@angular/cdk": "^13.3.8",
+    "@angular/common": "^13.3.10",
+    "@angular/compiler": "^13.3.10",
+    "@angular/core": "^13.3.10",
+    "@angular/forms": "^13.3.10",
+    "@angular/material": "^13.3.8",
+    "@angular/platform-browser": "^13.3.10",
+    "@angular/platform-browser-dynamic": "^13.3.10",
+    "@angular/router": "^13.3.10",
+    "@angular/service-worker": "^13.3.10",
+    "core-js": "^3.22.7",
     "fuzzy": "^0.1.3",
     "normalize.css": "^8.0.1",
-    "rxjs": "^7.3.0",
-    "zone.js": "^0.11.4"
+    "rxjs": "^7.5.5",
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.4",
-    "@angular/cli": "^12.2.4",
-    "@angular/compiler-cli": "^12.2.4",
-    "@angular/language-service": "^12.2.4",
-    "@types/jasmine": "^3.9.0",
+    "@angular-devkit/build-angular": "^13.3.7",
+    "@angular/cli": "^13.3.7",
+    "@angular/compiler-cli": "^13.3.10",
+    "@angular/language-service": "^13.3.10",
+    "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^16.7.10",
+    "@types/node": "^17.0.35",
     "brotli": "^1.3.2",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "^3.9.0",
+    "jasmine-core": "^4.1.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "~5.0.1",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "^7.0.0",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.8.0",
     "tslint": "^6.1.3",
-    "typescript": "~4.3.5",
-    "webpack-bundle-analyzer": "^4.4.2"
+    "typescript": "^4.6.2",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
