Update dependencies and parse HTML to find feeds.
Will need more work. Currently only works for a single feed with no
option to select between multiple feeds.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 !.vscode/extensions.json
 
 # misc
+.angular
 /.sass-cache
 /connect.lock
 /coverage
@@ -35,6 +36,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+.todo
 
 # System Files
 .DS_Store
