--- a/package.json
+++ b/package.json
@@ -19,44 +19,54 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.10",
-    "@angular/cdk": "^13.3.8",
-    "@angular/common": "^13.3.10",
-    "@angular/compiler": "^13.3.10",
-    "@angular/core": "^13.3.10",
-    "@angular/forms": "^13.3.10",
-    "@angular/material": "^13.3.8",
-    "@angular/platform-browser": "^13.3.10",
-    "@angular/platform-browser-dynamic": "^13.3.10",
-    "@angular/router": "^13.3.10",
-    "@angular/service-worker": "^13.3.10",
-    "core-js": "^3.22.7",
+    "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.0",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
+    "@angular/service-worker": "^14.2.0",
+    "core-js": "^3.25.0",
     "fuzzy": "^0.1.3",
     "normalize.css": "^8.0.1",
-    "rxjs": "^7.5.5",
-    "zone.js": "^0.11.5"
+    "rxjs": "^7.5.6",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.7",
-    "@angular/cli": "^13.3.7",
-    "@angular/compiler-cli": "^13.3.10",
-    "@angular/language-service": "^13.3.10",
-    "@types/jasmine": "^4.0.3",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular-eslint/builder": "14.0.3",
+    "@angular-eslint/eslint-plugin": "14.0.3",
+    "@angular-eslint/eslint-plugin-template": "14.0.3",
+    "@angular-eslint/schematics": "14.0.3",
+    "@angular-eslint/template-parser": "14.0.3",
+    "@angular/cli": "^14.2.1",
+    "@angular/compiler-cli": "^14.2.0",
+    "@angular/language-service": "^14.2.0",
+    "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^17.0.35",
-    "brotli": "^1.3.2",
+    "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "brotli": "^1.3.3",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "^4.1.1",
+    "eslint": "^8.18.0",
+    "jasmine-core": "^4.3.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.20",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "~5.0.1",
+    "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "^7.0.0",
-    "ts-node": "^10.8.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.6.2",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2",
+    "webpack-bundle-analyzer": "^4.6.1",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest"
   }
 }
