--- a/package.json
+++ b/package.json
@@ -19,54 +19,54 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@angular/service-worker": "^16.0.0",
-    "core-js": "^3.30.1",
+    "@angular/animations": "^16.2.3",
+    "@angular/cdk": "^16.2.2",
+    "@angular/common": "^16.2.3",
+    "@angular/compiler": "^16.2.3",
+    "@angular/core": "^16.2.3",
+    "@angular/forms": "^16.2.3",
+    "@angular/material": "^16.2.2",
+    "@angular/platform-browser": "^16.2.3",
+    "@angular/platform-browser-dynamic": "^16.2.3",
+    "@angular/router": "^16.2.3",
+    "@angular/service-worker": "^16.2.3",
+    "core-js": "^3.32.1",
     "fuzzy": "^0.1.3",
     "normalize.css": "^8.0.1",
     "rxjs": "^7.8.1",
-    "zone.js": "^0.13.0"
+    "zone.js": "^0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular-eslint/builder": "16.0.1",
-    "@angular-eslint/eslint-plugin": "16.0.1",
-    "@angular-eslint/eslint-plugin-template": "16.0.1",
-    "@angular-eslint/schematics": "16.0.1",
-    "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
-    "@types/jasmine": "^4.3.1",
+    "@angular-devkit/build-angular": "^16.2.1",
+    "@angular-eslint/builder": "16.1.1",
+    "@angular-eslint/eslint-plugin": "16.1.1",
+    "@angular-eslint/eslint-plugin-template": "16.1.1",
+    "@angular-eslint/schematics": "16.1.1",
+    "@angular-eslint/template-parser": "16.1.1",
+    "@angular/cli": "^16.2.1",
+    "@angular/compiler-cli": "^16.2.3",
+    "@angular/language-service": "^16.2.3",
+    "@types/jasmine": "^4.3.5",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
+    "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "6.5.0",
+    "@typescript-eslint/parser": "6.5.0",
     "brotli": "^1.3.3",
     "codelyzer": "^6.0.2",
-    "eslint": "^8.39.0",
+    "eslint": "^8.48.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-prefer-arrow": "latest",
-    "jasmine-core": "^4.6.0",
+    "jasmine-core": "^5.1.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "webpack-bundle-analyzer": "^4.8.0"
+    "typescript": "~5.1.0",
+    "webpack-bundle-analyzer": "^4.9.1"
   }
 }
