--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 # Editor configuration, see http://editorconfig.org
-root = true
+# root = true
 
-[*]
+[*.go]
 charset = utf-8
 indent_style = tab
 indent_size = 2
