--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,11 @@ clap = { version = "4.5.9", features = ["derive"] }
 color-eyre = "0.6.3"
 dateparser = "0.2.1"
 derive_more = { version = "0.99.18", default-features = false, features = ["from", "deref", "deref_mut"] }
+event-listener = "5.3.1"
+futures-util = { version = "0.3.30", default-features = false }
 humansize = "2.1.3"
+# TODO -- this one should get merged into Futures
+mapped_futures = "0.1.8"
 mime_guess = "2.0.5"
 once_cell = "1.19.0"
 regex = "1.10.5"
