--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ event-listener = "5.3.1"
 futures-util = { version = "0.3.30", default-features = false }
 humansize = "2.1.3"
 # TODO -- this one should get merged into Futures
-mapped_futures = "0.1.8"
+# It is also unsound at head and needs to be patched
+mapped_futures = { version = "0.1.8", path = "../../third_party/mapped_futures" }
 mime_guess = "2.0.5"
 once_cell = "1.19.0"
 regex = "1.10.5"
