--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,20 +23,19 @@ event-listener = "5.3.1"
 futures-util = { version = "0.3.30", default-features = false }
 humansize = "2.1.3"
 # TODO -- this one should get merged into Futures
-# It is also unsound at head and needs to be patched
-mapped_futures = { version = "0.1.8", path = "../../third_party/mapped_futures" }
+mapped_futures = "0.1.12"
 mime_guess = "2.0.5"
 once_cell = "1.19.0"
 regex = "1.10.5"
 reqwest = { version = "0.12.5", features = ["brotli", "deflate", "json", "gzip"] }
 rust-embed = { version = "8.5.0", features = ["compression"] }
 rss = { version = "2.0.8", default-features = false }
-scraper = { version = "0.19.0", default-features = false }
+scraper = { version = "0.19.1", default-features = false }
 serde = { version = "1.0.204", default-features = false, features = ["derive"] }
 sha2 = "0.10.8"
 sqlx = { version = "0.7.4", default-features = false, features = ["macros", "chrono", "sqlite", "migrate"] }
-thiserror = "1.0.62"
-tokio = { version = "1.38.0", features = ["macros", "process", "rt", "sync", "time"] }
+thiserror = "1.0.63"
+tokio = { version = "1.38.1", features = ["macros", "process", "rt", "sync", "time"] }
 tower = { version = "0.4.13", features = ["limit"] }
 tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
 tracing = "0.1.40"
