--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ rss = { version = "2.0.8", default-features = false }
 scraper = { version = "0.19.1", default-features = false }
 serde = { version = "1.0.204", default-features = false, features = ["derive"] }
 sha2 = "0.10.8"
-sqlx = { version = "0.7.4", default-features = false, features = ["macros", "chrono", "sqlite", "migrate"] }
+shlex = "1.3.0"
+sqlx = { version = "0.8.0", default-features = false, features = ["macros", "chrono", "sqlite", "migrate"] }
 thiserror = "1.0.63"
 tokio = { version = "1.38.1", features = ["macros", "process", "rt", "sync", "time"] }
 tower = { version = "0.4.13", features = ["limit"] }
