--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ derive_more = { version = "0.99.18", default-features = false, features = ["from
 event-listener = "5.3.1"
 futures-util = { version = "0.3.30", default-features = false }
 humansize = "2.1.3"
+humantime = "2.1.0"
 # TODO -- this one should get merged into Futures
 mapped_futures = "0.1.12"
 mime_guess = "2.0.5"
