--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ mapped_futures = "0.1.13"
 mime_guess = "2.0.5"
 once_cell = "1.20.2"
 regex = "1.11.0"
-reqwest = { version = "0.12.8", features = ["brotli", "deflate", "json", "gzip"] }
+reqwest = { version = "0.12.8", features = ["brotli", "deflate", "json", "gzip", "rustls-tls"] }
 rust-embed = { version = "8.5.0", features = ["compression"] }
 rss = { version = "2.0.9", default-features = false }
 scraper = { version = "0.20.0", default-features = false }
