--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,18 @@ services:
       - ./package.json:/aw-rss/parent-package.json:rw
       - ./package-lock.json:/aw-rss/parent-lock.json:rw
     command: bash
+  sandbox-rw:
+    image: aw-rss-base
+    depends_on:
+      - aw-rss-base
+    network_mode: host
+    volumes:
+      - ./:/aw-rss:rw
+    command: bash
   copy-modules:
     image: aw-rss-base
     depends_on:
       - aw-rss-base
     volumes:
-      - ./frontend:/aw-rss/frontend:ro
       - ./node_modules:/aw-rss/node_modules_out:rw
     command: sh -c "rsync -rlptD --delete --size-only node_modules/ node_modules_out"
