--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ humantime = "2.2.0"
 # TODO -- this one should get merged into Futures
 mapped_futures = "0.2.1"
 mime_guess = "2.0.5"
+# can remove once_cell in 1.89
 once_cell = "1.21.3"
 regex = "1.11.1"
 reqwest = { version = "0.12.22", features = ["brotli", "deflate", "json", "gzip", "rustls-tls"] }
